# dnspod-tool

./: .gitignore  MANIFEST.in  README.md  README.zh-CN.md  dnspod apitool.py  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/dnspod_tool/: __init__.py  api.py  cli.py  config.py  errors.py  models.py  tui.py
