[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnspod-tool"
version = "0.1.0"
description = "CLI and terminal UI for managing DNSPod records."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "keyring>=25",
    "requests>=2.31",
    "tencentcloud-sdk-python>=3.0.0",
]

[project.scripts]
dnspod = "dnspod_tool.main:main"

[tool.setuptools.packages.find]
where = ["src"]
